# ins_widget

./: CMakeLists.txt  README.md  collapsible_widget.cpp  collapsible_widget.h  histogram_widget.cpp  histogram_widget.h  image_param_widget.cpp  image_param_widget.h  ins_image_graph_item.cpp  ins_image_graph_item.h  ins_image_graphics_view.cpp  ins_image_graphics_view.h  ins_image_widget.cpp  ins_image_widget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
